# Install.me

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs  ui.rs
src/ui/: events.rs  pages.rs  start.rs
