[package]
name = "install_me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^1.3"
fltk-theme = "^0.6"
fltk-grid = "^0.1"
fltk-evented = "^0.2"
toml = "^0.7"
directories = "^4.0"
winreg ="^0.11"
